Add model: Match, TeamMatch, Game

--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,2 +1,6 @@
-<%= form_for @team do |f| -%>
+<%= form_for team do |f| -%>
+  <%= f.label :name %>
+  <%= f.fields_for :user_teams do |user_team_fields| %>
+    <%= user_team_fields.select :user_id, options_from_collection_for_select(User.all, :id, :full_name)%>
+  <% end %>
 <% end %>
