--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,4 +1,5 @@
-<%= team.name %> <br/>
+Team name: <%= team.name %> <br/>
+Members:
 <% team.users.each do |member| %>
   <%= member.full_name -%> <br/>
 <% end %>
