--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>User edit</h1>
-<%= render partial: 'form', locals: { user: @user } -%>
+<section class="content-header">
+  <h1>User Edit</h1>
+</section>
+<section class="content container-fluid">
+  <%= render partial: 'form', locals: { user: @user } -%>
+</section>
