--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
-<h1>User new</h1>
-
-<%= render partial: 'form', locals: { user: @user } -%>
+<section class="content-header">
+  <h1>New User</h1>
+</section>
+<section class="content container-fluid">
+  <%= render partial: 'form', locals: { user: @user } -%>
+</section>
