--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,8 +1,25 @@
-<h1>New game <%= @match.teams.map(&:name).join(' vs ') -%></h1>
-<%= form_for([@match, @game]) do |f| %>
-  <%= f.label :score -%>
-  <%= f.text_field :score -%>
-  <%= f.label :winning_team_id -%>
-  <%= f.select :winning_team_id, options_from_collection_for_select(@match.teams, :id, :name) %>
-  <%= f.submit %>
-<% end %>
+<section class="content-header">
+  <h1><%= @match.teams.map(&:name).join(' vs ') -%></h1>
+</section>
+
+<section class="content container-fluid">
+  <%= form_for([@match, @game], html: { class: 'form-horizontal' }) do |f| %>
+    <div class="form-group">
+      <%= f.label :score, class: 'col-sm-2 control-label' -%>
+      <div class="col-sm-10">
+        <%= f.text_field :score, class: 'form-control'  -%>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :winning_team_id, class: 'col-sm-2 control-label' -%>
+      <div class="col-sm-10">
+        <%= f.select :winning_team_id, options_from_collection_for_select(@match.teams, :id, :name), {}, { class: 'form-control' } %>
+      </div>
+    </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit class: "btn btn-primary" %>
+        </div>
+      </div>
+    <% end %>
+</section>
