--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,28 @@
     <title>FantasyFoosball</title>
     <%= csrf_meta_tags %>
 
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <%= javascript_include_tag 'application' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="hold-transition skin-blue sidebar-mini">
+    <div class="wrapper">
+      <header class="main-header">
+	<a href="/" class="logo">Fantasy Foosball</a>
+	<nav class="navbar navbar-static-top" role="navigation">
+	  <!-- Sidebar toggle button-->
+	  <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+	    <span class="sr-only">Toggle navigation</span>
+	  </a>
+	</nav>
+      </header>
+      <%= render 'layouts/sidebar' %>
+      <div class="content-wrapper">
+	<%= yield %>
+      </div>
+    </div>
   </body>
 </html>
