--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -1,5 +1,8 @@
-<%= match_counter + 1 -%>
-<% match.teams.each do |team| %>
-  <%= team.name -%>
-<% end %>
-<br/>
+<tr>
+  <td><%= match_counter + 1 -%></td>
+  <% match.teams.each do |team| %>
+    <td><%= team.name -%></td>
+  <% end %>
+  <td>0</td>
+  <td><%= link_to 'New game', new_match_game_path(match) %></td>
+</tr>
