--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,9 +1,21 @@
-<h1>New match</h1>
+<section class="content-header">
+  <h1>New match</h1>
+</section>
 
-<%= form_for(@match) do |f| %>
+<section class="content container-fluid">
+<%= form_for(@match, html: { class: 'form-horizontal' }) do |f| %>
   <%= f.fields_for :team_matches do |team_match_fields| %>
-    <%= team_match_fields.label :team_id %>
-    <%= team_match_fields.select :team_id, options_from_collection_for_select(Team.all, :id, :name), { include_blank: true } %>
+  <div class="form-group">
+    <%= team_match_fields.label :team_id, class: 'col-sm-2 control-label'  %>
+    <div class="col-sm-10">
+      <%= team_match_fields.select :team_id, options_from_collection_for_select(Team.all, :id, :name), { include_blank: true }, {class: 'form-control'} %>
+    </div>
+  </div>
   <% end %>
-  <%= f.submit %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
+  </div>
 <% end %>
+</section>
