--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,14 +1,24 @@
-<%= form_for team do |f| -%>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <br/>
+<%= form_for(team, html: { class: 'form-horizontal' }) do |f| -%>
+  <div class="form-group">
+    <%= f.label :name, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :name, class: 'form-control' -%>
+    </div>
+  </div>
   <%= f.fields_for :user_teams do |user_team_fields| %>
-    <%= user_team_fields.hidden_field :id %>
-    <%= user_team_fields.label :user_id %>
-    <%= user_team_fields.select :user_id, 
-      options_from_collection_for_select(User.all, :id, :full_name, user_team_fields.object.user_id), 
-      { include_blank: true } %>
-    <br/>
+    <div class="form-group">
+      <%= user_team_fields.hidden_field :id %>
+      <%= user_team_fields.label :user_id, class: 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= user_team_fields.select :user_id, 
+          options_from_collection_for_select(User.all, :id, :full_name, user_team_fields.object.user_id), 
+          { include_blank: true }, { class: 'form-control' } %>
+    </div>
+    </div>
   <% end %>
-  <%= f.submit %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
+  </div>
 <% end %>
