--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Team Edit</h1>
-<%= render partial: 'form', locals: { team: @team }-%>
+<section class="content-header">
+  <h1>Team Edit</h1>
+</section>
+<section class="content container-fluid">
+  <%= render partial: 'form', locals: { team: @team }-%>
+</section>
