--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,20 @@
-<%= form_for user do |f| -%>
-  <%= f.label :first_name -%>
-  <%= f.text_field :first_name -%>
+<%= form_for(user, html: { class: 'form-horizontal' }) do |f| -%>
+  <div class="form-group">
+    <%= f.label :first_name, class: 'col-sm-2 control-label' -%>
+    <div class="col-sm-10">
+    <%= f.text_field :first_name, class: 'form-control' -%>
+    </div>
+  </div>
 
-  <%= f.label :last_name -%>
-  <%= f.text_field :last_name -%>
-  <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :last_name, class: 'col-sm-2 control-label' -%>
+    <div class="col-sm-10">
+      <%= f.text_field :last_name, class: 'form-control' -%>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
+  </div>
 <% end %>
