--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,6 @@
-<%= user.first_name %>
-<%= user.last_name %>
-<br/>
+<tr>
+  <td><%= user.id %></td>
+  <td><%= user.first_name %></td>
+  <td><%= user.last_name %></td>
+  <td><%= link_to "Edit", edit_user_path(user) %></td>
+</tr>
