--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,15 @@
+<section class="content-header">
 <h1>User list</h1>
-<%= render partial: 'user', collection: @users -%>
+</section>
+<section class="content container-fluid">
+  <%= link_to "New user", new_user_path, class: "btn btn-lg btn-success" -%>
+<table class="table table-bordered table-hover">
+  <tr>
+    <th>#</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Edit</th>
+  </tr>
+  <%= render partial: 'user', collection: @users -%>
+</table>
+</section>
