--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,16 +1,15 @@
-<section class="content-header">
-  <h1>Matches list</h1>
-</section>
-<section class="content container-fluid">
-  <%= link_to "New match", new_match_path, class: "btn btn-lg btn-success" -%>
-  <table class="table table-bordered table-hover">
-    <tr>
-      <th>#</th>
-      <th>Team 1</th>
-      <th>Team 2</th>
-      <th>Game count</th>
-      <th>New game</th>
-    </tr>
-    <%= render partial: 'match', collection: @matches %>
-  </table>
-</section>
+<% content_for :page_header do %>
+  Matches list
+<% end %>
+
+<%= link_to "New match", new_match_path, class: "btn btn-lg btn-success" -%>
+<table class="table table-bordered table-hover">
+  <tr>
+    <th>#</th>
+    <th>Team 1</th>
+    <th>Team 2</th>
+    <th>Game count</th>
+    <th>New game</th>
+  </tr>
+  <%= render partial: 'match', collection: @matches %>
+</table>
