--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
-<section class="content-header">
-<h1>User list</h1>
-</section>
-<section class="content container-fluid">
-  <%= link_to "New user", new_user_path, class: "btn btn-lg btn-success" -%>
+<% content_for :page_header do %>
+  Matches list
+<% end %>
+
+<%= link_to "New user", new_user_path, class: "btn btn-lg btn-success" -%>
 <table class="table table-bordered table-hover">
   <tr>
     <th>#</th>
@@ -12,4 +12,3 @@
   </tr>
   <%= render partial: 'user', collection: @users -%>
 </table>
-</section>
