--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
-<h1>User Detail</h1>
+<% content_for :page_header do %>
+  User detail
+<% end %>
 
 <%= render partial: 'user', locals: { user: @user } %>
