--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,34 +6,22 @@
           <span>Top teams</span>
         <% end %>
       </li>
-      <li class="active">
+      <li class="<%= params[:controller] == 'users' ? 'active' : '' -%>">
         <%= link_to users_path do %>
           <span>User Management</span>
         <% end %>
       </li>
 
-      <li>
+      <li class="<%= params[:controller] == 'teams' ? 'active' : '' -%>">
         <%= link_to teams_path do %>
           <span>Team Management</span>
         <% end %>
       </li>
 
-      <li>
+      <li class="<%= ['matches', 'games'].include?(params[:controller]) ? 'active' : '' -%>">
         <%= link_to matches_path do %>
           <span>Match Management</span>
         <% end %>
-      </li>
-
-      <li class="treeview">
-        <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-          <span class="pull-right-container">
-            <i class="fa fa-angle-left pull-right"></i>
-          </span>
-        </a>
-        <ul class="treeview-menu">
-          <li><a href="#">Link in level 2</a></li>
-          <li><a href="#">Link in level 2</a></li>
-        </ul>
       </li>
   </section>
 </aside>
