--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,16 +1,15 @@
-<section class="content-header">
-  <h1>New match</h1>
-</section>
+<% content_for :page_header do %>
+  New match
+<% end %>
 
-<section class="content container-fluid">
 <%= form_for(@match, html: { class: 'form-horizontal' }) do |f| %>
   <%= f.fields_for :team_matches do |team_match_fields| %>
-  <div class="form-group">
-    <%= team_match_fields.label :team_id, class: 'col-sm-2 control-label'  %>
-    <div class="col-sm-10">
-      <%= team_match_fields.select :team_id, options_from_collection_for_select(Team.all, :id, :name), { include_blank: true }, {class: 'form-control'} %>
+    <div class="form-group">
+      <%= team_match_fields.label :team_id, class: 'col-sm-2 control-label'  %>
+      <div class="col-sm-10">
+        <%= team_match_fields.select :team_id, options_from_collection_for_select(Team.all, :id, :name), { include_blank: true }, {class: 'form-control'} %>
+      </div>
     </div>
-  </div>
   <% end %>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
@@ -18,4 +17,3 @@
     </div>
   </div>
 <% end %>
-</section>
