--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -9,7 +9,8 @@
     <th>Team 1</th>
     <th>Team 2</th>
     <th>Game count</th>
-    <th>New game</th>
+    <th>Winner</th>
+    <th>Action</th>
   </tr>
   <%= render partial: 'match', collection: @matches %>
 </table>
