--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -8,9 +8,8 @@
     <th>#</th>
     <th>Name</th>
     <th>Members</th>
-    <th>Win</th>
-    <th>Lose</th>
-    <th>Edit</th>
+    <th>Win ratio</th>
+    <th>Action</th>
   </tr>
   <%= render partial: 'team', collection: @teams %>
 </table>
