--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,11 +2,15 @@
   Team: <%= @team.name -%>
 <% end %>
 
-<h2>Members</h2>
-<% @team.users.each_with_index do |member, index| %>
-  <%= index + 1 %>.
-  <%= member.full_name %>
-  <br/>
-<% end %>
+<table class="table table-bordered table-hover">
+  <th>#Member</th>
+  <th>Name</th>
+  <% @team.users.each_with_index do |member, index| %>
+    <tr>
+      <td><%= index + 1 %></td>
+      <td><%= link_to member.full_name, user_path(member) %></td>
+    </tr>
+  <% end %>
+</table>
 
-<%= link_to "Edit", edit_team_path(@team) -%>
+<%= link_to "Edit", edit_team_path(@team), class: "btn btn-primary" -%>
