--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <th>#</th>
     <th>First Name</th>
     <th>Last Name</th>
-    <th>Edit</th>
+    <th>Action</th>
   </tr>
   <%= render partial: 'user', collection: @users -%>
 </table>
