--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,27 @@
   User detail
 <% end %>
 
-<%= render partial: 'user', locals: { user: @user } %>
+<form class="form-horizontal">
+  <div class="form-group">
+    <label class="col-sm-2 control-label">ID</label>
+    <div class="col-sm-10">
+      <p class="form-control-static"><%= @user.id -%></p>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label">First Name</label>
+    <div class="col-sm-10">
+      <p class="form-control-static"><%= @user.first_name -%></p>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Last Name</label>
+    <div class="col-sm-10">
+      <p class="form-control-static"><%= @user.last_name -%></p>
+    </div>
+  </div>
+</form>
+
+<%= link_to "Edit", edit_user_path(@user), class: 'btn btn-primary' %>
