--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -2,4 +2,5 @@
   New team
 <% end %>
 
+<%= render partial: 'shared/errors', locals: { model: @team }-%>
 <%= render partial: 'form', locals: { team: @team }-%>
