--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -2,12 +2,14 @@
   New match
 <% end %>
 
+<%= render partial: 'shared/errors', locals: { model: @match }-%>
+
 <%= form_for(@match, html: { class: 'form-horizontal' }) do |f| %>
   <%= f.fields_for :team_matches do |team_match_fields| %>
     <div class="form-group">
       <%= team_match_fields.label :team_id, class: 'col-sm-2 control-label'  %>
       <div class="col-sm-10">
-        <%= team_match_fields.select :team_id, options_from_collection_for_select(Team.all, :id, :name), { include_blank: true }, {class: 'form-control'} %>
+        <%= team_match_fields.select :team_id, options_from_collection_for_select(Team.all, :id, :name, team_match_fields.object.team_id), { include_blank: true }, {class: 'form-control'} %>
       </div>
     </div>
   <% end %>
