--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,5 @@
   New user
 <% end %>
 
+<%= render partial: 'shared/errors', locals: {model: @user} %>
 <%= render partial: 'form', locals: { user: @user } -%>
